estilizei o CRUD e adicionei uma funcionalidade JS

--- a/crud.html
+++ b/crud.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto CRUD</title>
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/crud.css">
 </head>
 <body>
     <h1>Projeto CRUD</h1>
+    <h2>Programa desenvolvido em Python</h2>
+    <h3>Menu interativo focado em corredores que desejam planejar e organizar seus treinos de forma prática e eficiente. Ele permite que os usuários definam metas, acompanhem seu progresso e ajustem o cronograma de treinos de acordo com seu desempenho e disponibilidade.</h3>
+    <figure>
+        <img src="src/design/adicionarTreinos.png" alt="adicionar Treinos">
+        <figcaption>Função de adicionar treinos</figcaption>
+    </figure>
+    <figure>
+        <img src="src/design/visualizarTreinos.png" alt="visualizar Treinos">
+        <figcaption>Função de visualizar treinos</figcaption>
+    </figure>
+    <figure>
+        <img src="src/design/atualizarTreinos.png" alt="atualizar Treinos">
+        <figcaption>Função de atualizar treinos</figcaption>
+    </figure>
+    <figure>
+        <img src="src/design/removerTreinos.png" alt="remover Treinos">
+        <figcaption>Função de remover treinos</figcaption>
+    </figure>
+    <figure>
+        <img src="src/design/menuPrincipal.png" alt="Menu Principal">
+        <figcaption>Código principal</figcaption>
+    </figure>
+    <script src="src/js/crud.js"></script>
 </body>
 </html>
