criei um arquivo.css para a pagina Arduino e outros bugfixes

--- a/arduino.html
+++ b/arduino.html
@@ -3,48 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Caça ao Tesouro</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        h1 {
-            text-align: center;
-            margin: 20px 0;
-            color: #00796b;
-        }
-        figure {
-            margin: 20px auto;
-            max-width: 600px;
-            text-align: center;
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-        }
-        img, video {
-            max-width: 100%;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
-        figcaption {
-            font-size: 0.9em;
-            color: #555;
-        }
-        body > * {
-            margin: 0 auto;
-            max-width: 900px;
-        }
-    </style>
+    <title>Projeto Cultural Steps</title>
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/arduino.css">
 </head>
 <body>
-    <h1>Projeto Caça ao Tesouro</h1>
+    <h1>Projeto Cultural Steps</h1>
     <figure>
         <img src="src/design/arduino.jpeg" alt="Imagem de Gabriel">
         <figcaption>Projetando o dispositivo</figcaption>
