--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="profile-picture">
-                <img src="src/images/eu.jpeg" alt="Gabriel Victalino">
+                <img src="src/design/gabriel.jpeg" alt="Gabriel Victalino">
             </div>
             <div class="contato">
                 <h3>Contato</h3>
@@ -26,6 +26,7 @@
                     <li>Desenvolvedor Frontend</li>
                     <li>Python</li>
                     <li>Comunicação assertiva</li>
+                    <li>Trabalho em equipe</li>
                 </ul>
             </div>
         </aside>
@@ -38,11 +39,11 @@
                     <a href="https://github.com/gabrielvictalino" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </nav>
             </header>
-            <section class="work-experience">
+            <section class="bio">
                 <h2>Biografia</h2>
                 <p>Meu nome é Gabriel Victalino Mancebo, mas me chamam de Carioca e estou cursando Ciência da Computação na CESAR School. Seguidor de Jesus Cristo, flamenguista e macaense, eu gosto de praticar vários esportes, amo animais, crianças e idosos, e Python é, atualmente, minha linguagem favorita e tento melhorar a cada dia para me tornar uma pessoa melhor.</p>
             </section>
-            <section class="objective">
+            <section class="objetivo">
                 <h2>Objetivo</h2>
                 <p>Meu grande objetivo é trabalhar ao lado de pessoas que tenham a mesma vontade de crescer e desenvolver uma inteligência articial que possa ajudar os que necessitam.</p>
             </section>
